# desilence-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.ps1
.github/workflows/: actionlint.yml  build.yml  clippy.yml  docker-build.yml  release-manager.yml  rustfmt.yml
scripts/: bump_version.py  update-readme-help.py
src/: audio_trim.rs  cli.rs  error.rs  lib.rs  main.rs  pipeline.rs  segment.rs  silence.rs
