[package]
name = "desilence-rs"
version = "0.2.2"
edition = "2021"
description = "Remove silence from video files, streaming output to stdout"
license = "MIT"
authors = ["Chrisliebär"]
repository = "https://github.com/chrisliebaer/desilence-rs"

[features]
default = []
static = ["ffmpeg-next/static", "ffmpeg-next/build"]

[dependencies]
# FFmpeg bindings - using git version with build feature for Windows
# The upstream already has Windows MSVC + MSYS2 build support
ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg.git", default-features = false, features = [
    "codec",
    "format",
    "filter",
    "software-resampling",
    "software-scaling",
] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling with pretty diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
